# siena-mem

./: LICENSE  Makefile  README.md
aspen/: LICENSE.txt  Makefile.in  README.md  configure  configure.ac
aspen/aspen/: Makefile.in
aspen/aspen/app/: ASTCaseItem.cpp  ASTCaseItem.h  ASTControlIfThenStatement.cpp  ASTControlIfThenStatement.h  ASTControlIterateStatement.cpp  ASTControlIterateStatement.h  ASTControlKernelCallStatement.cpp  ASTControlKernelCallStatement.h  ASTControlMapStatement.cpp  ASTControlMapStatement.h  ASTControlParallelStatement.cpp  ASTControlParallelStatement.h  ASTControlProbabilityStatement.cpp  ASTControlProbabilityStatement.h  ASTControlSequentialStatement.cpp  ASTControlSequentialStatement.h  ASTControlStatement.cpp  ASTControlStatement.h  ASTControlSwitchStatement.cpp  ASTControlSwitchStatement.h  ASTExecutionBlock.cpp  ASTExecutionBlock.h  ASTExecutionStatement.h  ASTImportStatement.h  ASTKernel.cpp  ASTKernel.h  ASTKernelArgDecl.h  ASTRequiresStatement.h  ASTSampleStatement.cpp  ASTSampleStatement.h  ASTTrait.h
aspen/aspen/common/: AST.h  ASTNode.cpp  ASTNode.h  Exception.h  MappingRestriction.h  ModelVisitor.h  NameMap.h  ParameterStack.h
aspen/aspen/expr/: Array.cpp  Array.h  ArrayDereference.cpp  ArrayDereference.h  BinaryExpr.cpp  BinaryExpr.h  CallStackSubstitution.cpp  CallStackSubstitution.h  Comparison.cpp  Comparison.h  Expression.cpp  Expression.h  ExpressionBuilder.h  FunctionCall.cpp  FunctionCall.h  Identifier.cpp  Identifier.h  IfThenExpr.cpp  IfThenExpr.h  Integer.cpp  Integer.h  Real.cpp  Real.h  SequenceExpr.cpp  SequenceExpr.h  Table.cpp  Table.h  TableDereference.cpp  TableDereference.h  UnaryExpr.cpp  UnaryExpr.h  Value.h
aspen/aspen/mach/: ASTMachComponent.cpp  ASTMachComponent.h  ASTMachConnectivity.h  ASTMachPower.h  ASTMachProperty.h  ASTMachResource.h  ASTResourceConflict.h  ASTSubComponent.h  ASTTraitDefinition.h
aspen/aspen/map/: ASTMap.cpp  ASTMap.h  ASTMapStatement.cpp  ASTMapStatement.h
aspen/aspen/model/: ASTAppModel.cpp  ASTAppModel.h  ASTAssignEnumStatement.h  ASTAssignRangeStatement.h  ASTAssignStatement.h  ASTDataStatement.h  ASTEnumDeclaration.h  ASTMachModel.cpp  ASTMachModel.h  ASTMapModel.cpp  ASTMapModel.h  ASTStatement.h
aspen/aspen/parser/: AspenParseNode.h  AspenParser.cpp  AspenParser.hpp  AspenParser.output  AspenParser.y  AspenTokens.cpp  AspenTokens.l  NamespacePrefixer.h  ParseVector.h  Parser.cpp  Parser.h  backupAspenParser.y
aspen/aspen/walkers/: AspenTool.h  CallStackTracer.h  ControlFlowWalker.h  MultiplicityTracker.h  ResourceCounter.h  ResourceExpression.h  RuntimeCounter.h  RuntimeExpression.h
aspen/config/: .gitignore  AspenConfig.h.in  ax_cxx_compile_stdcxx_11_mod_jsm.m4  ax_python_devel.m4  make-dependencies.in  make-targets.in  make-variables.in
aspen/config-site/: Linux.conf  ion.ornl.gov.conf  madrid.ftpn.ornl.gov.conf
aspen/lib/: .gitignore
engine/: ar_baseobj.cpp  ar_baseobj.h  ar_cache.cpp  ar_cache.h  ar_cacheobj.cpp  ar_cacheobj.h  ar_config.cpp  ar_context.cpp  ar_context.h  ar_core.cpp  ar_core.h  ar_dnode.cpp  ar_dnode.h  ar_dramsim.cpp  ar_dramsim.h  ar_engine.cpp  ar_engine.h  ar_execblock.cpp  ar_execblock.h  ar_memalloc.h  ar_memobj.cpp  ar_memobj.h  ar_memsim.cpp  ar_memsim.h  ar_node.h  ar_nvdsim.cpp  ar_nvdsim.h  ar_onode.h  ar_parse.cpp  ar_ramulator.cpp  ar_ramulator.h  ar_typedef.h  ar_utility.cpp  ar_walker.cpp  main.cpp
models/application/conv/: conv_F3_t32_N12000.aspen  gen_app.sh  gen_job.sh
models/application/jacobi3d/: gen_job.sh  jacobi_t32_N384.aspen  jacobi_t32_N512.aspen  jacobi_t32_N64.aspen
models/application/laplace/: gen_job.sh  laplace_t32_N12000.aspen  laplace_t32_N9000.aspen
models/application/memdist/: memdist10M_HPM0_DDR100_t1.aspen  memdist10M_HPM0_DDR100_t128.aspen  memdist10M_HPM0_DDR100_t16.aspen  memdist10M_HPM0_DDR100_t2.aspen  memdist10M_HPM0_DDR100_t32.aspen  memdist10M_HPM0_DDR100_t4.aspen  memdist10M_HPM0_DDR100_t64.aspen  memdist10M_HPM0_DDR100_t8.aspen  memdist10M_HPM100_DDR0_t1.aspen  memdist10M_HPM100_DDR0_t128.aspen  memdist10M_HPM100_DDR0_t16.aspen  memdist10M_HPM100_DDR0_t2.aspen  memdist10M_HPM100_DDR0_t32.aspen  memdist10M_HPM100_DDR0_t4.aspen  memdist10M_HPM100_DDR0_t64.aspen  memdist10M_HPM100_DDR0_t8.aspen  memdist10M_HPM10_DDR90_t1.aspen  memdist10M_HPM10_DDR90_t128.aspen  memdist10M_HPM10_DDR90_t16.aspen  memdist10M_HPM10_DDR90_t2.aspen  memdist10M_HPM10_DDR90_t32.aspen  memdist10M_HPM10_DDR90_t4.aspen  memdist10M_HPM10_DDR90_t64.aspen  memdist10M_HPM10_DDR90_t8.aspen  memdist10M_HPM20_DDR80_t1.aspen  memdist10M_HPM20_DDR80_t128.aspen  memdist10M_HPM20_DDR80_t16.aspen  memdist10M_HPM20_DDR80_t2.aspen  memdist10M_HPM20_DDR80_t32.aspen  memdist10M_HPM20_DDR80_t4.aspen  memdist10M_HPM20_DDR80_t64.aspen  memdist10M_HPM20_DDR80_t8.aspen  memdist10M_HPM30_DDR70_t1.aspen  memdist10M_HPM30_DDR70_t128.aspen  memdist10M_HPM30_DDR70_t16.aspen  memdist10M_HPM30_DDR70_t2.aspen  memdist10M_HPM30_DDR70_t32.aspen  memdist10M_HPM30_DDR70_t4.aspen  memdist10M_HPM30_DDR70_t64.aspen  memdist10M_HPM30_DDR70_t8.aspen  (+49 more)
models/application/mg/: gen_job.sh  mg_t32_B.aspen  mg_t32_C.aspen
models/application/miniFE/: gen_job.sh  miniFE.aspen  miniFE_t32_nx132_ny128_nz128.aspen  miniFE_t32_nx132_ny128_nz256.aspen  (+7 more)
models/machine/: DDR_4096.aspen  HPM0_4096.aspen  HPM1_4096.aspen  H_HPM0_2048_DDR_8192.aspen  H_HPM0_2048_NVM_8192.aspen  H_HPM0_8192_DDR_8192.aspen  H_HPM0_8192_NVM_8192.aspen  H_HPM1_2048_DDR_8192.aspen  H_HPM1_2048_NVM_8192.aspen  H_HPM1_8192_DDR_8192.aspen  H_HPM1_8192_NVM_8192.aspen  NVM_4096.aspen  NVM_8192.aspen  V_HPM0_1024_DDR_4096.aspen  V_HPM0_128_DDR_4096.aspen  V_HPM0_2048_DDR_4096.aspen  V_HPM0_256_DDR_4096.aspen  V_HPM0_512_DDR_4096.aspen  V_HPM0_8192_DDR_8192.aspen  V_HPM0_8192_NVM_8192.aspen  V_HPM1_128_DDR_4096.aspen  V_HPM1_256_DDR_4096.aspen  V_HPM1_8192_DDR_8192.aspen
nvdimmsim/src/: Ftl.cpp  Makefile  TraceBasedSim.cpp
ramulator/: Makefile
scripts/: generate_app.sh  generate_arch.sh  generate_mapping.sh  generate_result.sh  job.sh
test/: hms.aspen  mapping.aspen  stream.aspen
(+46 files in other folders)
